--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,5 +1,6 @@
 {
   "name": "myapp",
+  "homepage": "https://gstlogistics.co.in/react",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
