--- a/myapp/package.json
+++ b/myapp/package.json
@@ -1,6 +1,6 @@
 {
   "name": "myapp",
-  "homepage": "https://gstlogistics.co.in/react",
+  "homepage": "https://react.gstlogistics.co.in/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -56,6 +56,7 @@
     "sklearn": "^0.4.0",
     "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4",
+    "yarn": "^1.22.22",
     "yup": "^1.4.0"
   },
   "proxy": "http://localhost:5000",
@@ -82,7 +83,9 @@
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "last 1 edge version",
+      "last 1 brave version"
     ]
   },
   "devDependencies": {
